Breaking long URLS to prevent overflow
Added CSS to handle long URL overflow

--- a/packages/rocketchat-livechat/app/client/stylesheets/main.less
+++ b/packages/rocketchat-livechat/app/client/stylesheets/main.less
@@ -258,6 +258,13 @@ input:focus {
 					border-radius: 6px;
 					padding: 5px;
 					float: left;
+					word-wrap: break-word;
+					word-break: break-word;
+					-ms-word-break: break-all;
+					-ms-hyphens: auto;
+					-moz-hyphens: auto;
+					-webkit-hyphens: auto;
+					hyphens: auto;
 
 					&::before {
 						border-style: solid;
